# photography-portfolio

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 6145ecc436ea_initial_schema.py  8357d04fa51e_initial_schema.py  9a08b979dc0d_create_initial_schema.py  9b6933144cc4_initial_schema.py  e5c906302540_update_user_schema_to_include_enabled_.py
inventory/: database.db
services/: image_processor.py
src/: config.py  database.py  databse.py  main.py
src/dependencies/: config.py  database.py  logging.py  store.py  templates.py
src/models/: models.py  photo.py  responses.py  schema.py
src/routers/: admin.py  public.py
src/services/: admin.py  admin_service.py  auth.py  crud.py  image_processor.py  photo_service.py  user_service.py
src/static/css/: input.css  output.css
src/static/scripts/: admin.js  delete.js
src/templates/: 404.html  500.html  about.html  admin.html  base.html  collections.html  index.html  login.html  register.html  upload.html  view.html
src/utils/: file_utils.py  hash.py  util.py
tests/: test_config.py  test_database.py
tests/dependencies/: test_database.py  test_logging.py
tests/services/: test_admin_service.py  test_photo_service.py  test_user_service.py
