[project]
name = "photo-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
