[project]
name = "photo-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "jinja2>=3.1.6",
    "pillow>=12.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
